# DjangoDSN

./: db.sqlite3  pyproject.toml
.upm/: store.json
lycee/: models.py
mysite/: urls.py
