[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Gaëtan CHARRON <gaetan.charronbalat@limayrac.fr>"]
description = "Projet DSN Django"
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
